--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,9 @@
 [project]
-name = "mcp-github"
+name = "ghmcp"
 version = "0.1.0"
-description = "MCP GitHub Project"
-requires-python = ">=3.10"
+description = "Add your description here"
+readme = "README.md"
+requires-python = ">=3.12"
 dependencies = [
-    # From binance-mcp
-    "mcp[cli]==1.9.2",
-    "requests==2.32.3", # Also for llm-tool-use
+    "fastmcp>=2.11.3",
 ]
